RESOLVED FIXED175476
[GTK][WPE] Overriden virtual function not marked “override” in ImageBufferDataCairo.h
https://bugs.webkit.org/show_bug.cgi?id=175476
Summary [GTK][WPE] Overriden virtual function not marked “override” in ImageBufferDat...
Adrian Perez
Reported 2017-08-11 05:18:01 PDT
The following warning is generated when building with Clang: In file included from ../../Source/WebCore/platform/graphics/ImageBufferData.h:31: ../../Source/WebCore/platform/graphics/cairo/ImageBufferDataCairo.h:65:45: warning: 'proxy' overrides a member function but is not marked 'override' [-Winconsistent-missing-override] RefPtr<TextureMapperPlatformLayerProxy> proxy() const; ^ ../../Source/WebCore/platform/graphics/texmap/TextureMapperPlatformLayerProxyProvider.h:36:53: note: overridden virtual function is here virtual RefPtr<TextureMapperPlatformLayerProxy> proxy() const = 0; ^
Attachments
Patch (1.41 KB, patch)
2017-08-11 05:20 PDT, Adrian Perez
no flags
Adrian Perez
Comment 1 2017-08-11 05:20:27 PDT
WebKit Commit Bot
Comment 2 2017-08-11 06:47:03 PDT
Comment on attachment 317925 [details] Patch Clearing flags on attachment: 317925 Committed r220586: <http://trac.webkit.org/changeset/220586>
WebKit Commit Bot
Comment 3 2017-08-11 06:47:04 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4 2017-08-11 06:47:48 PDT
Note You need to log in before you can comment on or make changes to this bug.