[GTK][WPE] Overriden virtual function not marked “override” in ImageBufferDataCairo.h https://bugs.webkit.org/show_bug.cgi?id=175476

Reviewed by Carlos Garcia Campos.

* platform/graphics/cairo/ImageBufferDataCairo.h: Add missing "override" qualifier.


Canonical link: https://commits.webkit.org/192181@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@220586 268f45cc-cd09-0410-ab3c-d52691b4dbfc